--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "attila",
+  "name": "attila-cn",
   "description": "Ghost Theme",
   "demo": "http://attila.zutrinken.com",
-  "version": "1.7.6",
+  "version": "1.7.7",
   "engines": {
     "ghost": ">=2.1.0"
   },
